# quill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.cursor-rules/: pre-commit.yaml  pytest.yaml  ty.yaml
.cursor/rules/: README.md  pre-commit.yaml  pytest.yaml  ruff.yaml  sphinx.yaml  ty.yaml  uv.yaml
.github/: badges.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  epic.md  feature_request.md  initiative.md  maintenance.md  performance.md  refactoring.md  testing.md
.github/workflows/: ci.yml  quality-checks.yml  release.yml
docs/commands/: list.md
docs/decisions/: ADR-001-roadmap-migration.md
docs/setup/: ci-setup.md  installation.md  package-availability.md  publishing.md  release-checklist.md  version-management.md
docs/source/: architecture.md  commands.md  conf.py  contributing.md  export-command.md  get-file-command.md  index.md  installation.md  library.md  list-command.md  quickstart.md  tdd-practices.md  user-quickstart.md
docs/source/_static/: custom.css
scripts/: check-package-availability.sh  release.sh  update-versions.sh
src/quill/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py  utils.py
src/quill/cli/: __init__.py  commands.py  navigation.py
src/quill/drive/: __init__.py  client.py  models.py
src/quill/formatters/: __init__.py  display.py
tests/: __init__.py  conftest.py
tests/unit/: test_auth.py  test_cli.py  test_config.py  test_exceptions.py  test_export_cli.py  test_library.py  test_navigation.py  test_utils.py
(+4 files in other folders)
