[project]
name = "quill"
version = "0.1.0"
requires-python = ">=3.8"

[tool.ruff]
line-length = 88
target-version = "py38" 

[dependency-groups]
dev = [
    "myst-parser>=3.0.1",
    "pre-commit>=3.6.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.13",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
    "ty>=0.0.1a9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=quill --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py38"
